--- a/x360ce.App.Beta/Controls/UserProgramsControl.xaml
+++ b/x360ce.App.Beta/Controls/UserProgramsControl.xaml
@@ -1,26 +1,26 @@
 ﻿<UserControl
-	x:Class="x360ce.App.Controls.UserProgramsControl"
-	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-	xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-	xmlns:local="clr-namespace:x360ce.App.Controls"
-	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-	x:Name="This"
-	d:DesignHeight="450"
-	d:DesignWidth="800"
-	Loaded="UserControl_Loaded"
-	Unloaded="UserControl_Unloaded"
-	mc:Ignorable="d">
-	<Grid>
-		<Grid.RowDefinitions>
-			<RowDefinition Height="*" />
-			<RowDefinition Height="Auto" />
-		</Grid.RowDefinitions>
-		<local:UserProgramListControl x:Name="ListPanel" Grid.Row="0" x:FieldModifier="public" />
-		<local:ProgramItemControl
-			x:Name="ItemPanel"
-			Grid.Row="1"
-			x:FieldModifier="public"
-			IsEnabled="False" />
-	</Grid>
+    x:Class="x360ce.App.Controls.UserProgramsControl"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:local="clr-namespace:x360ce.App.Controls"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    x:Name="This"
+    d:Height="900"
+    d:Width="900"
+    Loaded="UserControl_Loaded"
+    Unloaded="UserControl_Unloaded"
+    mc:Ignorable="d">
+    <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="*" MinHeight="345" />
+            <RowDefinition Height="Auto" />
+        </Grid.RowDefinitions>
+        <local:UserProgramListControl x:Name="ListPanel" x:FieldModifier="public" />
+        <local:ProgramItemControl
+            x:Name="ItemPanel"
+            Grid.Row="1"
+            x:FieldModifier="public"
+            IsEnabled="False" />
+    </Grid>
 </UserControl>
